--- a/src/layout/Navigation.module.css
+++ b/src/layout/Navigation.module.css
@@ -1,4 +1,5 @@
 .header {
+    margin: 0;
     width: 100%;
     height: 5rem;
     display: flex;
@@ -38,10 +39,10 @@
     color: white;
   }
   
-  .badge {
+/*   .badge {
     background-color: #cc2062;
     color: white;
     border-radius: 12px;
     padding: 0 1rem;
     margin-left: 0.5rem;
-  }
+  } */
