--- a/src/components/meetups/NewMeetupForm.module.css
+++ b/src/components/meetups/NewMeetupForm.module.css
@@ -1,5 +1,6 @@
 .form {
     padding: 1rem;
+ 
   }
   
   .control {
@@ -7,7 +8,6 @@
   }
   
   .control label {
-    display: block;
     font-weight: bold;
     margin-bottom: 0.5rem;
   }
@@ -16,9 +16,9 @@
   .control textarea {
     display: block;
     font: inherit;
-    border-radius: 4px;
+    border-radius: 15px;
     border: 1px solid #ccc;
-    padding: 0.25rem;
+    padding: 10px;
     width: 100%;
   }
   
@@ -34,7 +34,7 @@
     color: white;
     padding: 0.5rem 1.5rem;
     border: 1px solid #77002e;
-    border-radius: 4px;
+    border-radius: 15px;
     font-weight: bold;
   }
   
